--- a/style.css
+++ b/style.css
@@ -258,8 +258,16 @@ input[type="checkbox"] {
       
     }
 
+   
+
     .cart-border .cart-bound {
-        padding: 10px;
+        border: 1px solid transparent;
+        width: 100%;
+        margin-top: 30px;
+        padding: 10px 20px;
+        padding-top: 45px;
+        background-color: white;
+        margin-left: 2px;
     }
 
 }
